--- a/FoodCollector/PublicationEditorTVCPhoneNumEditorCustomCell.xib
+++ b/FoodCollector/PublicationEditorTVCPhoneNumEditorCustomCell.xib
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="מה מספר הטלפון?" textAlignment="right" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="IMh-CF-HQE">
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="What's your phone number?" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="IMh-CF-HQE">
                         <rect key="frame" x="8" y="7" width="297" height="30"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
