--- a/FoodCollector/Base.lproj/FCPublishAddressEditorMyLocationCustomCell.xib
+++ b/FoodCollector/Base.lproj/FCPublishAddressEditorMyLocationCustomCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,20 +17,17 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okz-8U-Qoa">
                         <rect key="frame" x="44" y="12" width="176" height="21"/>
-                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CurentLocationIcon" translatesAutoresizingMaskIntoConstraints="NO" id="REn-ci-4XE">
                         <rect key="frame" x="15" y="15" width="16" height="16"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="16" id="5Mi-0H-uwb"/>
                         </constraints>
                     </imageView>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="okz-8U-Qoa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="09Y-Fj-PFf"/>
                     <constraint firstAttribute="trailingMargin" secondItem="okz-8U-Qoa" secondAttribute="trailing" constant="92" id="4Wb-sH-viK"/>
@@ -41,7 +38,6 @@
                     <constraint firstAttribute="centerY" secondItem="okz-8U-Qoa" secondAttribute="centerY" id="gnb-E3-mwd"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <point key="canvasLocation" x="353" y="355.5"/>
         </tableViewCell>
     </objects>
