--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -2197,6 +2197,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="5R1-71-kds" kind="unwind" identifier="unwindFromAudianceSelectionTVC" unwindAction="unwindFromAudianceSelectionTVC:" id="AIB-Tr-BV0"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -2206,6 +2209,7 @@
                     </tableView>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ids-dv-taD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="5R1-71-kds" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="3315" y="2092"/>
         </scene>
