--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -662,7 +662,7 @@
                                                 <rect key="frame" x="0.0" y="20" width="297" height="44"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="es5-GA-BxO" id="0XI-xp-1Ae">
-                                                    <rect key="frame" x="0.0" y="0.0" width="297" height="43"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="297" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nAq-Ow-v9c">
@@ -951,7 +951,7 @@
                                 <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="collectorDetailsCell" id="XM4-LY-Pik" customClass="ContactCollectorPickerCollectorDetailsCell" customModule="FoodCollector" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="560" height="44"/>
+                                        <rect key="frame" x="0.0" y="49.5" width="560" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XM4-LY-Pik" id="CiD-up-f36">
                                             <rect key="frame" x="0.0" y="0.0" width="560" height="44"/>
@@ -999,7 +999,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="sendSmsToCollectorsCell" id="KDc-Up-DpV" customClass="ContactCollectorsPickerSendSmsCell" customModule="FoodCollector" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="94" width="560" height="44"/>
+                                        <rect key="frame" x="0.0" y="93.5" width="560" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KDc-Up-DpV" id="4tU-nw-EI2">
                                             <rect key="frame" x="0.0" y="0.0" width="560" height="44"/>
@@ -1198,7 +1198,7 @@
                                 <rect key="frame" x="0.0" y="66" width="375" height="110"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nOK-Hd-C35" id="aNs-u4-V9a">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="109"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="109.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Big_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="Oir-l9-AxA">
@@ -1225,7 +1225,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="249" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hf6-tK-AE0">
-                                            <rect key="frame" x="120" y="44" width="30" height="16"/>
+                                            <rect key="frame" x="120" y="47" width="30" height="16"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="16" id="Bit-cW-kBE"/>
                                                 <constraint firstAttribute="height" constant="14" id="LPI-El-QXh"/>
@@ -1240,7 +1240,7 @@
                                             </variation>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5OQ-bl-l9O">
-                                            <rect key="frame" x="88" y="44" width="30" height="16"/>
+                                            <rect key="frame" x="88" y="47" width="30" height="16"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="16" id="qsG-6H-Z54"/>
                                             </constraints>
@@ -1273,6 +1273,16 @@
                                                 </mask>
                                             </variation>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3MD-dr-XON" userLabel="Price Label">
+                                            <rect key="frame" x="88" y="32" width="82" height="15"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="15" id="PMs-ix-YGx"/>
+                                                <constraint firstAttribute="width" constant="82" id="mrz-Le-fl8"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="11"/>
+                                            <color key="textColor" red="0.96078431372549022" green="0.65098039215686276" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="5OQ-bl-l9O" firstAttribute="leading" secondItem="Oir-l9-AxA" secondAttribute="trailing" constant="8" id="0zg-Be-srT"/>
@@ -1286,6 +1296,7 @@
                                         <constraint firstItem="6h8-2b-WKd" firstAttribute="top" secondItem="aNs-u4-V9a" secondAttribute="top" constant="10" id="Rpv-gf-6rF"/>
                                         <constraint firstItem="UUi-bh-y4c" firstAttribute="top" secondItem="aNs-u4-V9a" secondAttribute="top" constant="12" id="U57-fW-ldj"/>
                                         <constraint firstItem="3Zb-jF-K2K" firstAttribute="leading" secondItem="Oir-l9-AxA" secondAttribute="trailing" constant="8" id="XEJ-qe-q8P"/>
+                                        <constraint firstItem="3MD-dr-XON" firstAttribute="leading" secondItem="Oir-l9-AxA" secondAttribute="trailing" constant="8" id="cHt-Ml-ZId"/>
                                         <constraint firstAttribute="trailing" secondItem="838-xw-iQa" secondAttribute="trailing" constant="10" id="cNT-8i-9dn"/>
                                         <constraint firstItem="6h8-2b-WKd" firstAttribute="leading" secondItem="Oir-l9-AxA" secondAttribute="trailing" constant="35" id="eRP-uX-xaj"/>
                                         <constraint firstItem="Hf6-tK-AE0" firstAttribute="leading" secondItem="UUi-bh-y4c" secondAttribute="leading" id="eya-v1-yE4"/>
@@ -1293,12 +1304,15 @@
                                         <constraint firstItem="UUi-bh-y4c" firstAttribute="leading" secondItem="Oir-l9-AxA" secondAttribute="trailing" constant="8" id="h0O-T6-pLF"/>
                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Hf6-tK-AE0" secondAttribute="trailing" constant="10" id="hjC-CN-QH2"/>
                                         <constraint firstItem="Oir-l9-AxA" firstAttribute="centerY" secondItem="aNs-u4-V9a" secondAttribute="centerY" id="mHR-YX-g90"/>
+                                        <constraint firstItem="5OQ-bl-l9O" firstAttribute="top" secondItem="3MD-dr-XON" secondAttribute="bottom" id="mI1-Zu-1kG"/>
                                         <constraint firstItem="Hf6-tK-AE0" firstAttribute="leading" secondItem="5OQ-bl-l9O" secondAttribute="trailing" constant="2" id="ozr-zN-90x"/>
+                                        <constraint firstItem="3MD-dr-XON" firstAttribute="top" secondItem="6h8-2b-WKd" secondAttribute="bottom" id="rEX-a4-wcV"/>
                                         <constraint firstItem="Hf6-tK-AE0" firstAttribute="bottom" secondItem="Oir-l9-AxA" secondAttribute="bottom" id="rYL-uQ-K4C"/>
-                                        <constraint firstItem="5OQ-bl-l9O" firstAttribute="top" secondItem="6h8-2b-WKd" secondAttribute="bottom" constant="12" id="td4-wk-nGp"/>
+                                        <constraint firstItem="5OQ-bl-l9O" firstAttribute="top" secondItem="6h8-2b-WKd" secondAttribute="bottom" constant="15" id="td4-wk-nGp"/>
                                     </constraints>
                                     <variation key="default">
                                         <mask key="constraints">
+                                            <exclude reference="td4-wk-nGp"/>
                                             <exclude reference="887-ft-UiF"/>
                                             <exclude reference="PJt-Hc-urf"/>
                                             <exclude reference="eya-v1-yE4"/>
@@ -1313,6 +1327,7 @@
                                     <outlet property="countOfRegisteredUsersLabel" destination="3Zb-jF-K2K" id="b66-m6-KAR"/>
                                     <outlet property="distanceLabel" destination="Hf6-tK-AE0" id="apr-3G-Amu"/>
                                     <outlet property="photoImageView" destination="Oir-l9-AxA" id="gmH-tJ-7Uh"/>
+                                    <outlet property="priceLabel" destination="3MD-dr-XON" id="s1x-MR-MXg"/>
                                     <outlet property="timeRemains" destination="838-xw-iQa" id="Rvu-rD-EHh"/>
                                     <outlet property="titleLabel" destination="6h8-2b-WKd" id="0tf-pa-A9f"/>
                                 </connections>
@@ -1513,7 +1528,7 @@
                                 <rect key="frame" x="0.0" y="22" width="150" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Njc-Jb-Pzu" id="qtQ-ih-52E">
-                                    <rect key="frame" x="0.0" y="0.0" width="150" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -2289,7 +2304,7 @@
                                         <rect key="frame" x="0.0" y="180" width="320" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VXH-GP-3L1" id="ad4-Dv-RMh">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="89"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NoPhotoPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="Vfk-Xe-p2Z">
@@ -2431,7 +2446,7 @@
                                         <rect key="frame" x="0.0" y="22" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zwE-ZR-1Uj" id="9D9-8h-OMv">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -2808,7 +2823,7 @@
                                 <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ContactCollectorPhonePickerLabelCell" id="8Ar-MX-diw" customClass="ContactCollectorPhonePickerLabelCell" customModule="FoodCollector" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="560" height="44"/>
+                                        <rect key="frame" x="0.0" y="49.5" width="560" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Ar-MX-diw" id="EFl-lu-8zI">
                                             <rect key="frame" x="0.0" y="0.0" width="560" height="44"/>
